# epic-brain

./: .cursorignore  .env.example  .gitignore  README.md  bot.py  check_cuda.py  download_model.py  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  service.py  summarization_prompt.txt  summarizer.py  summarizer_utils.py
.cursor/rules/: epic-brain.mdc
src/: __init__.py  api_example.py  check_documents.py  clean_logs.py  clean_markdown.py  config.py  ingestion_pipeline.py  process_documents.py  run_api.py  run_ingestion.py
src/api/: __init__.py  main.py
src/models/: __init__.py  base.py  gguf.py  ollama.py  openai_model.py  transformers_model.py
src/rag/: __init__.py  pipeline.py  retriever.py
